# dosemu2

./: dosemu2.spec.in
debian/: control
etc/: dosemu.conf  global.conf
src/base/emu-i386/: kvm.c
src/base/init/: config.c  lexer.l  parser.y
src/include/: emu.h
src/plugin/sdl/: Makefile  configure.ac  sdl.c
